# JASSv2

./: .codecov.yml  .codedocs  .ruby-version  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  appveyor.yml  build.sh  coverity_model.c  env.yml  project-description.md  requirements.txt  setup.py  uploadpypi.sh
.github/workflows/: ccpp.yml
JASSv1/: CI.c  CI.h  GNUmakefile  atire_to_jass_index.c  compress.h  compress_integer_elias_delta_simd.c  compress_integer_elias_delta_simd.h  compress_integer_elias_gamma_simd.c  compress_integer_elias_gamma_simd.h  compress_integer_elias_gamma_simd_vb.cpp  compress_integer_elias_gamma_simd_vb.h  compress_integer_variable_byte.cpp  compress_integer_variable_byte.h  compress_qmx.c  compress_qmx.h  compress_qmx_d4.c  compress_qmx_d4.h  compress_qmx_decompress.c  compress_simple8b.c  compress_simple8b.h  compress_variable_byte.c  compress_variable_byte.h  heap.h  jass.c  maths.c  maths.h  process_postings.c  process_postings.h
JASSv1/data/: queries.clueweb09.txt  queries.clueweb12.txt  queries.gov2.txt
JASSv1/trec2query/: GNUmakefile  README.md  trec2query.c
anytime/: CMakeLists.txt  JASS.swg  JASS_anytime.cpp  JASS_anytime_api.cpp  JASS_anytime_api.h  JASS_anytime_index.cpp  JASS_anytime_index.h  JASS_anytime_query.h  JASS_anytime_result.h  JASS_anytime_segment_header.h  JASS_anytime_stats.h  JASS_anytime_thread_result.h  PyJASS.swg  PyJASS_example.py
compiled_index/: CMakeLists.txt  JASS_compiled_index.cpp  JASS_postings.cpp  JASS_postings.h  JASS_primary_keys.cpp  JASS_vocabulary.cpp  JASS_vocabulary.h
docker/: Dockerfile  FT911_11.Z  build.sh  lzw.cpp  mac_build.sh  makefile
docker/lzw/: StreamIO.hh  lzw.cc  lzw.hh
docker/osirrc2019/: Dockerfile  index  index_robust04  init  readme.txt  search  search_robust04
examples/: CMakeLists.txt  parser_use.cpp  parser_use.h
experimental/: CMakeLists.txt  compress_integer_bitpack.cpp  compress_integer_bitpack.h  compress_integer_bitpack_128.cpp  compress_integer_bitpack_128.h  compress_integer_bitpack_256.cpp  compress_integer_bitpack_256.h  compress_integer_bitpack_32_reduced.cpp  compress_integer_bitpack_32_reduced.h  compress_integer_bitpack_64.cpp  compress_integer_bitpack_64.h  compress_integer_lyck_16.cpp  compress_integer_lyck_16.h  compress_integer_nybble_8.cpp  compress_integer_nybble_8.h  compress_integer_prn_512.cpp  compress_integer_prn_512.h  examine_index.cpp  parse_json.cpp  prm.cpp
scripts/: cmake.sh
source/: CMakeLists.txt  accumulator_2d.h  accumulator_counter.h  accumulator_counter_interleaved.h  allocator.cpp  allocator.h  allocator_cpp.h  allocator_memory.cpp  allocator_memory.h  allocator_pool.cpp  allocator_pool.h  ascii.h  assert.cpp  assert.h  asserts.cpp  asserts.h  beap.h  binary_tree.h  bitstream.h  bitstring.cpp  bitstring.h  bool.h  channel.h  channel_buffer.cpp  channel_buffer.h  channel_file.cpp  channel_file.h  channel_inex.c  channel_inex.h  channel_socket.c  channel_socket.h  channel_trec.c  channel_trec.cpp  channel_trec.h  checksum.cpp  checksum.h  commandline.h  compress_general.h  compress_general_zlib.cpp  compress_general_zlib.h  (+221 more)
tools/: CMakeLists.txt  ECOM19_to_JASS_eval.cpp  ECOM19_to_run.cpp  JASS_eval.cpp  JASS_index.cpp  JASSv1_to_human.cpp  ascii_database_to_c.cpp  bin_to_human.cpp  ciff_lin.h  ciff_to_JASS.cpp  cmp_d_to_utype.d  coverity_scan.sh  dump_ciff_lin.cpp  hash.cpp  index.cpp  protobuf.h  shared_index_format.cpp  test_integer_compress.cpp  test_integer_compress_average.cpp  test_unicode_database_to_c.sh  test_zstd.cpp  travis_dependencies.sh  trec_to_query.cpp  unicode_database_to_c.cpp  unicodedata_to_utype.c  unicodedata_to_utype.cpp  unittest.cpp
